Cleaning up slickgrid

--- a/app/css/directives/countBy.less
+++ b/app/css/directives/countBy.less
@@ -19,6 +19,10 @@
     width: 100%;
     overflow: hidden;
 
+    .active-count {
+        color: @accent-bright;
+    }
+
     .record-count {
         @media (min-width: 1024px) {
             padding-left: 0px;
