--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -51,7 +51,7 @@
 
     <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : active.table.prettyName + ' / ' + active.field.prettyName"></div>
     <div class="pull-left header-text record-count" ng-hide="showTooMuchDataError">
-        <span class="text-primary ng-binding" ng-bind="active.count | number"></span> values
+        <span class="text-primary ng-binding active-count" ng-bind="active.count | number"></span> values
     </div>
 </div>
 <div class="clearfix"></div>
