--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -11,12 +11,12 @@
         <options-menu parent-element="element" export-function="makeQueryResultsTableExportObject">
             <div class="form-group" ng-show="!(hideAdvancedOptions)">
                 <label>Database</label>
-                <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
+                <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="handleDatabaseChange()">
                 </select>
             </div>
             <div class="form-group" ng-show="!(hideAdvancedOptions)">
                 <label>Table</label>
-                <select class="form-control" ng-model="active.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()">
+                <select class="form-control" ng-model="active.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="handleTableChange()">
                 </select>
             </div>
 
