--- a/app/partials/directives/optionsMenu.html
+++ b/app/partials/directives/optionsMenu.html
@@ -1,7 +1,8 @@
 <div class="chart-options pull-right">
     <a class="btn collapsed" data-toggle="collapse" data-target=".{{uniqueVisualizationOptions}} .popover" data-animation=false ng-click="toggleOptionsDisplay()">
-        <span class="header-text" ng-show="showButtonText()" ng-bind="getButtonText()"></span>
-        <span class="glyphicon glyphicon-cog"></span>
+        <span id="text" class="header-text" ng-bind="getButtonText()" ng-show="showButtonText()" title="{{getButtonText()}}" style="display: none;"></span>
+        <span id="symbol" class="glyphicon glyphicon-exclamation-sign" ng-show="showButtonText()" title="{{getButtonText()}}" style="display: none;"></span>
+        <span class="glyphicon glyphicon-cog" title="Open/Close the Options Menu"></span>
         <span class="caret"></span>
     </a>
     <div class="popover bottom">
