Removed the border-left style class from filter reset notifications because it is no longer used with the new theming changes.

--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -54,8 +54,8 @@
 <div class="header-container filter-container">
     <div class="header-item filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
         <links-popup-button key="{{generateLinksPopupKey(filterSet.value)}}" source="{{visualizationId}}" tooltip="{{filterSet.value}}" is-disabled="{{linksPopupButtonIsDisabled}}"></links-popup-button>
-        <span class="filter-label" ng-class="{true: '', false: 'border-left'}[linksPopupButtonIsDisabled]" ng-bind="filterSet.value"></span>
-        <span class="border-left glyphicon glyphicon-remove" ng-click="clearFilterSet()"></span>
+        <span class="filter-label" ng-bind="filterSet.value"></span>
+        <span class="glyphicon glyphicon-remove" ng-click="clearFilterSet()"></span>
     </div>
 
     <div class="legend">
