--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -78,8 +78,8 @@
     <div class="legend">
         <div class="header-item filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[brushExtent.length > 0]" title="Date from {{brushExtent[0].toUTCString()}} to {{brushExtent[1].toUTCString()}}">
             <links-popup-button key="{{getDateKeyForLinksPopupButton()}}" source="{{visualizationId}}" tooltip="{{brushExtent[0].toUTCString()}} to {{brushExtent[1].toUTCString()}}" is-disabled="{{linksPopupButtonIsDisabled}}"></links-popup-button>
-            <span class="filter-label" ng-class="{true: '', false: 'border-left'}[linksPopupButtonIsDisabled]">Date Filter</span>
-            <span class="border-left glyphicon glyphicon-remove" ng-click="removeBrush()"></span>
+            <span class="filter-label">Date Filter</span>
+            <span class="glyphicon glyphicon-remove" ng-click="removeBrush()"></span>
         </div>
 
         <div class="legend-item legend-item-clickable" title="{{colorMapping.series}} {{getLegendItemAggregationText(colorMapping)}}" ng-repeat="colorMapping in colorMappings" ng-click="toggleSeries(colorMapping.series)" ng-class="{true: 'legend-hidden', false: ''}[colorMapping.hidden]">
