--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -66,9 +66,9 @@
     <div class="header-item filter-reset pull-right" ng-repeat="tag in filterTags"
         title="{{options.tagField.prettyName}}={{options.showTranslation ? tag.nameTranslated : tag.name}}">
         <links-popup-button key="{{generateLinksPopupKey(tag.name)}}" source="{{visualizationId}}" tooltip="{{tag.name}}" is-disabled="{{linksPopupButtonIsDisabled}}"></links-popup-button>
-        <span class="filter-label" ng-class="{true: '', false: 'border-left'}[linksPopupButtonIsDisabled]" ng-bind="tag.name" ng-show="!options.showTranslation"></span>
-        <span class="filter-label" ng-class="{true: '', false: 'border-left'}[linksPopupButtonIsDisabled]" ng-bind="tag.nameTranslated" ng-show="options.showTranslation"></span>
-        <span class="border-left glyphicon glyphicon-remove" ng-click="removeFilter(tag.name)"></span>
+        <span class="filter-label" ng-bind="tag.name" ng-show="!options.showTranslation"></span>
+        <span class="filter-label" ng-bind="tag.nameTranslated" ng-show="options.showTranslation"></span>
+        <span class="glyphicon glyphicon-remove" ng-click="removeFilter(tag.name)"></span>
     </div>
 </div>
 
