--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -98,13 +98,13 @@
 <div class="header-container filter-container">
     <div class="header-item filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[brush.length > 0]" title="Date from {{startDateForDisplay}} to {{endDateForDisplay}}">
         <links-popup-button key="{{getDateKeyForLinksPopupButton()}}" source="{{visualizationId}}" tooltip="{{startDateForDisplay}} to {{endDateForDisplay}}" is-disabled="{{linksPopupButtonIsDisabled}}"></links-popup-button>
-        <span class="filter-label" ng-class="{true: '', false: 'border-left'}[linksPopupButtonIsDisabled]">Date Filter</span>
-        <span class="border-left glyphicon glyphicon-remove" ng-click="clearBrush()"></span>
+        <span class="filter-label">Date Filter</span>
+        <span class="glyphicon glyphicon-remove" ng-click="clearBrush()"></span>
     </div>
 
     <div class="header-item filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[invalidDatesFilter]" title="Invalid Date">
         <span class="filter-lg-label">Invalid Date Filter</span>
-        <span class="border-left glyphicon glyphicon-remove" ng-click="clearInvalidDatesFilter()"></span>
+        <span class="glyphicon glyphicon-remove" ng-click="clearInvalidDatesFilter()"></span>
     </div>
 
     <div class="neon-datetimepicker dropdown pull-left">
