Re-added the unshared filter to the Aggregation Table because it was wrongly removed during someone's sloppy merge.

--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -38,6 +38,25 @@
             </select>
         </div>
 
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Unshared Filter</label>
+            <select class="form-control" ng-model="active.filterField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleUnsharedFilterFieldChange()">
+                <option selected value="">None</option>
+            </select>
+
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="{{'Filter for ' + active.filterField.prettyName + '...'}}" ng-model="active.filterValue" ng-disabled="!(active.filterField.columnName)">
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default refresh" title="Remove Unshared Filter" ng-click="handleUnsharedFilterRemove()">
+                        <span class="glyphicon glyphicon-remove"></span>
+                    </button>
+                    <button type="button" class="btn btn-default refresh" title="Set Unshared Filter" ng-click="handleUnsharedFilterValueChange()">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
         <div class="form-group">
             <label>Value Limit</label>
             <div class="input-group">
