Moved the value count in the title text of the Aggregation Table to the options menu button.  Also fixed some minor issues with the coloring of the elements in the options menu buttons.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -140,26 +140,29 @@ select[multiple] {
 
 .chart-options {
     > a {
-        color: @accent-bright;
         background-color: transparent;
+        border: none;
         font-size: 16px;
         padding: 0;
-        border: none;
 
-        &.collapsed {
-            color: @main-text-color;
+        .header-text, .glyphicon, .caret {
+            color: @accent-bright;
         }
 
-        &:hover {
-            background: transparent;
-            border: none;
-            span {
-                color: @accent-bright;
+        &.collapsed {
+            .header-text, .glyphicon, .caret {
+                color: @main-text-color;
             }
         }
 
-        &:active, &.active {
+        &.active, &:active, &:focus, &:hover {
+            background: transparent;
+            border: none;
             box-shadow: none;
+
+            .header-text, .glyphicon, .caret {
+                color: @accent-bright;
+            }
         }
     }
 
@@ -207,7 +210,7 @@ select[multiple] {
                 color: @main-text-color;
             }
 
-            .btn-group {
+            .btn-group, .input-group-btn {
                 label {
                     color: @button-color;
                 }
